@@ -13,6 +13,7 @@ Changes for 1.5:
 
 Changes for 1.4.3:
 
+ - [ZBX-1] fixed wrong status of function "nodata" after server restart (Sasha)
  - [ZBX-33] fixed problem in table names in data.sql for PostgreSQL (Sasha)
  - [ZBX-32] fixed incorrect processing of IP ranges in ip_in_list (Sasha)
  - [ZBX-35] fixed processing of PROFILE related macros (Alexei)
